fix: make h3 in sess6 in services template align to left when in lg breakpoint

--- a/src/css/single-post-service.css
+++ b/src/css/single-post-service.css
@@ -77,7 +77,7 @@
   @apply flex flex-col items-center justify-center;
 }
 .testimonial__content {
-  @apply w-[260px] h-[400px] flex flex-col justify-start items-center bg-white rounded-xl p-4 font-neueKabel text-center gap-6 relative;
+  @apply w-[260px] h-[400px] flex flex-col justify-start items-center bg-white rounded-xl p-4 font-neueKabel text-center  gap-6 relative;
 }
 .testimonial__wrapper h3 {
   @apply mt-10 font-bold capitalize font-neueKabel;
@@ -99,7 +99,7 @@
   @apply border-y-2 border-y-gray-200 flex flex-col md:flex-row justify-between items-center pt-10 pb-12;
 }
 .sess6__services-content h3 {
-  @apply uppercase font-neueKabel font-semibold text-center text-4xl text-color-2 mb-6 md:mb-0 animate-pulse;
+  @apply uppercase font-neueKabel font-semibold text-center lg:text-left text-4xl text-color-2 mb-6 md:mb-0 animate-pulse;
 }
 .sess6__services-content p {
   @apply max-w-md text-center md:text-left;
